Stretch Goal - Fixed Nav

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -70,16 +70,23 @@ body{
 }
 header{
 	margin:auto;
-	margin-top:20px;
 	height:100px;
 }
 nav{
-	vertical-align: middle;
+	margin:auto;
+	position:fixed;
+	background:lightskyblue;
 	text-align:center;
 	display: inline-block;
 	padding:20px 10px;
+	width:900px;
+	height: 80px;
+	
+}
+nav div{
+	display:inline-block;
+	vertical-align:center;	
 	width:55%;
-	height:100%;
 }
 nav a{
 	text-align:center;
@@ -87,11 +94,12 @@ nav a{
 	color:black;
 	opacity:0.5;
 	padding:2.5%;
+	
 	margin:auto;
 }
 img.logo{
 	margin-left:10%;
-	width:30%;
+	width:20%;
 }
 section.first{
 	font-family: 'Bangers';
@@ -105,6 +113,12 @@ section.first{
 	margin:5% 10%;
 	margin-right:25%;
 
+}
+.first span:first-child{
+	padding-left:50%;
+}
+.first span:nth-child(2){
+	padding-left:20%;
 }
 img{
 	width: 310px;
@@ -120,7 +134,7 @@ h3{
 	font-style: normal;
 	font-weight: 400;
 }
-div{
+section div{
 	display:inline-block;
 	margin:30px 0;
 }
